fixed text alignment of home page near water image

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,8 +2,8 @@
   background-color: rgb(227, 238, 255, 0.7);
   display: flex;
   flex-direction: row;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 #contactLeftHalf {
   width: 40%;
@@ -24,6 +24,7 @@
   margin-bottom: 5%;
 }
 #fName {
+  
   width: 190px;
   height: 50px;
   font-size: 30px;
@@ -87,10 +88,11 @@
 }
 #contactLeftHeadText {
   font-weight: bold;
-  font-size: 70px;
+  font-size: 90px;
   padding-bottom: 3%;
 }
 #contactLeftBodyText {
+  font-weight: bold;
   font-size: 15px;
   inline-size: 70%;
   overflow-wrap: break-word;
@@ -114,11 +116,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 40px;
+    font-size: 30px;
     inline-size: 100%;
   }
   #contactLeftBodyText {
     inline-size: 100%;
+    font-weight: 100;
   }
   .namesContainer {
     display: flex;
